--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,19 @@
     --korean-font: font-family: 'Hi Melody', sans-serif;
     --bubbly-font: font-family: 'Bagel Fat One', sans-serif;
 }
-
+body {
+  background-color: rgb(55, 140, 156, .8);
+}
 .container {
  max-width: 1400px;
  margin: 0 auto;
 }
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* Head Banner */
 header  {
   background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../images/seo-1.jpg");
   background-repeat: no repeat;
@@ -45,6 +53,46 @@ header a {
   padding: 16px 32px;
   margin-top: 30px;
 }
+
+
+/* Footer */
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+}
+footer {
+  color: white;
+  background-image: linear-gradient(rgba(1,26,31,0.8), rgba(1,26,31,0.8)), url("../images/lake-seo.webp");
+  background-repeat: no repeat;
+  background-size: cover;
+  padding: 100px 0;
+}
+footer h3 {
+  font-size: 20px;
+  line-height: 30px;
+ 
+}
+footer p {
+  font-size: 16px;
+  line-height: 24px;
+  opacity: 0.7;
+  margin-right: 20px ;
+}
+footer ul {
+  padding: 0;
+}
+
+footer li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+footer a {
+  color: white;
+  opacity: 0.7;
+}
+/* Responsive */
 @media(max-width: 800px) {
   header {
     padding: 30px;
@@ -52,14 +100,15 @@ header a {
   header h1 {
     font-size: 70px;
   }
-   header h2 {
+  header h2 {
     font-size: 20px;
   }
-   header h3 {
+  header h3 {
     font-size: 17px;
   }
   header a {
     font-size: 10px;
     padding: 5px 10px;
   }
+  
 }
