--- a/src/styles.css
+++ b/src/styles.css
@@ -59,6 +59,7 @@ header a {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 64px;
 }
 footer {
   color: white;
@@ -76,7 +77,6 @@ footer p {
   font-size: 16px;
   line-height: 24px;
   opacity: 0.7;
-  margin-right: 20px ;
 }
 footer ul {
   padding: 0;
@@ -92,6 +92,7 @@ footer a {
   color: white;
   opacity: 0.7;
 }
+
 /* Responsive */
 @media(max-width: 800px) {
   header {
@@ -110,5 +111,4 @@ footer a {
     font-size: 10px;
     padding: 5px 10px;
   }
-  
 }
