--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@ body {
 section {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 100px 0;
 }
 
 /* Head Banner */
@@ -53,11 +54,52 @@ header a {
   padding: 16px 32px;
   margin-top: 30px;
 }
+/* Main */
+main {
+  background-color: white;
+  padding: 0px 50px;
+}
+.img-responsive {
+  max-width: 100%;
 
+}
+main h2 {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0;
+  letter-spacing: 5px;
+  color: black;
+  opacity: 0.3;
+  text-transform: uppercase;
+}
+
+main h3 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.5;
+  color: black;
+  margin: 0;
+}
+
+main p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: black;
+  opacity: 0.7;
+}
 
 /* Footer */
 .grid {
   display: grid;
+}
+.grid-2-columns {
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 30px
+}
+.grid-3-columns-1-narrow {
   grid-template-columns: 1fr 2fr 2fr;
   grid-gap: 64px;
 }
@@ -66,7 +108,7 @@ footer {
   background-image: linear-gradient(rgba(1,26,31,0.8), rgba(1,26,31,0.8)), url("../images/lake-seo.webp");
   background-repeat: no repeat;
   background-size: cover;
-  padding: 100px 0;
+  padding: 0;
 }
 footer h3 {
   font-size: 20px;
@@ -110,5 +152,12 @@ footer a {
   header a {
     font-size: 10px;
     padding: 5px 10px;
+  }
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap:32px
+  }
+  section {
+    padding: 30px;
   }
 }
