--- a/src/styles.css
+++ b/src/styles.css
@@ -10,9 +10,12 @@ body {
  margin: 0 auto;
 }
 section {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px;
+}
+section.secondary {
+  background-color: #f8f8f8;
 }
 
 /* Head Banner */
@@ -57,7 +60,6 @@ header a {
 /* Main */
 main {
   background-color: white;
-  padding: 0px 50px;
 }
 .img-responsive {
   max-width: 100%;
@@ -90,8 +92,46 @@ main p {
   color: black;
   opacity: 0.7;
 }
+/* Main Locations */
+.text-center {
+  text-align: center;
+}
+.card {
+  background-color: white;
+  margin: 30px 0;
+}
+main h4 {
+  font-size: 24px;
+  line-height: 1.5;
+  margin: 0;
 
-/* Footer */
+}
+main h5 {
+  font-size: 15px;
+  line-height: 1.5;
+  margin: 0;
+}
+.sub-title {
+  margin: 0;
+  font-size: 12px;
+}
+.card-body {
+  padding: 10px 20px;
+}
+.button {
+  display: block;
+  color: white;
+  background-color: rgba(1,26,31,1);
+  font-size: 14px;
+  line-height: 1.5;
+  letter-spacing: 3px;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 16px;
+  text-decoration: none;
+}
+
+/* Grids */
 .grid {
   display: grid;
 }
@@ -99,10 +139,23 @@ main p {
   grid-template-columns: 1fr 1fr;
   grid-gap: 30px
 }
+.grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap:10px;
+}
 .grid-3-columns-1-narrow {
   grid-template-columns: 1fr 2fr 2fr;
   grid-gap: 64px;
 }
+.grid-pics {
+  grid-template-columns: 1fr 1fr;
+}
+.grid-pic-height {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+/* Footer */
 footer {
   color: white;
   background-image: linear-gradient(rgba(1,26,31,0.8), rgba(1,26,31,0.8)), url("../images/lake-seo.webp");
