--- a/src/styles.css
+++ b/src/styles.css
@@ -135,6 +135,8 @@ main h5 {
   text-decoration: none;
 }
 
+
+
 /* Grids */
 .grid {
   display: grid;
@@ -162,6 +164,13 @@ main h5 {
   width: 100%;
   height: 100%;
 }
+.insta-embeds {
+ margin: 30px 0;
+}
+
+
+
+
 /* Footer */
 footer {
   color: white;
