--- a/src/styles.css
+++ b/src/styles.css
@@ -164,8 +164,10 @@ main h5 {
   width: 100%;
   height: 100%;
 }
-.insta-embeds {
- margin: 30px 0;
+.insta-embed {
+ margin: 30px auto;
+ display: flex;
+ justify-content: center;
 }
 
 
@@ -181,12 +183,12 @@ footer {
 }
 footer h3 {
   font-size: 20px;
-  line-height: 30px;
+  line-height: 1.5;
  
 }
 footer p {
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   opacity: 0.7;
 }
 footer ul {
@@ -202,6 +204,7 @@ footer li {
 footer a {
   color: white;
   opacity: 0.7;
+  line-height: 1.5;
 }
 
 /* Responsive */
@@ -234,5 +237,8 @@ footer a {
   }
   .embed {
     aspect-ratio: 16 / 9;
+  }
+  main h3 {
+    font-size: 30px;
   }
 }
