--- a/src/styles.css
+++ b/src/styles.css
@@ -210,13 +210,13 @@ footer a {
 /* Responsive */
 @media(max-width: 800px) {
   header {
-    padding: 30px;
+    padding: 25px;
   }
   header h1 {
-    font-size: 70px;
+    font-size: 60px;
   }
   header h2 {
-    font-size: 20px;
+    font-size: 15px;
   }
   header h3 {
     font-size: 17px;
@@ -228,6 +228,10 @@ footer a {
   .grid {
     grid-template-columns: 1fr;
     grid-gap:32px
+  }
+  .secondary a {
+    font-size: 10px;
+    padding: 7px 10px;
   }
   section {
     padding: 30px;
